--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ATLANTIDA</title>
 	<link rel="stylesheet" href="testnew.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="wrapper">
 		
 					<!--HEADER-->
 
@@ -117,6 +116,7 @@
 			</div>
 		</header>
 
+<div class="wrapper">
 					<!--MAIN-CONTENT-->
 
 		<section class="main-content">
@@ -379,75 +379,78 @@
 									<!--FOOTER-->
 
 	<footer class="footer">
+									
+		<div class="footer-bg-container">
+			<div class="footer-container-main">
 
-									<!--FOOTER-LEFT-->					
+									<!--FOOTER-LEFT-->
 
-		<div class="footer-container-left">
-			<a href="" class="footer-logo-link">
-				<img src="img/ATLANTIDA_logo.png" alt="" class="footer-logo">
-				<p class="footer-logo-text">
-					ATLANTIDA
-				</p>
-			</a>
-			<p class="footer-text-left">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque voluptas cum dolorem, sit, vitae ullam eius. Quisquam dolores officiis nobis eligendi cumque sunt sit maiores modi, placeat quibusdam, nesciunt voluptas!
-			</p>
-			<p class="footer-atlantida-studio">
-				ATLANTIDA STUDIO
-			</p>
-			<p class="footer-text-address">
-				Steven Berson, Attorney at Law 1556 Broadway, suite 416 New York, NY, 101220, USA
-			</p>
-			<p class="footer-left-email">
-				E-MAIL: ELEGANTFLYERS@GMIL.COM
-				+84 956 654 972
-			</p>
-			<div class="footer-social-media">
-					<ul class="footer-social">
-						<li class="footer-social-item">
-							<a href="" class="footer-social-link">
-								<i class="fa fa-facebook-official" aria-hidden="true"></i>|
-							</a>
-						</li>
-						<li class="footer-social-item">
-							<a href="" class="social-link">
-								<i class="fa fa-twitter" aria-hidden="true"></i>|
-							</a>
-						</li>
-						<li class="footer-social-item">
-							<a href="" class="footer-social-link">
-								<i class="fa fa-behance" aria-hidden="true"></i>
-							</a>
-						</li>
-					</ul>
+				<div class="footer-container-left">
+					<a href="" class="footer-logo-link">
+						<img src="img/ATLANTIDA_logo.png" alt="" class="footer-logo">
+						<p class="footer-logo-text">
+							ATLANTIDA
+						</p>
+					</a>
+					<p class="footer-text-left">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque voluptas cum dolorem, sit, vitae ullam eius. Quisquam dolores officiis nobis eligendi cumque sunt sit maiores modi, placeat quibusdam, nesciunt voluptas!
+					</p>
+					<p class="footer-atlantida-studio">
+						ATLANTIDA STUDIO
+					</p>
+					<p class="footer-text-address">
+						Steven Berson, Attorney at Law 1556 Broadway, suite 416 New York, NY, 101220, USA
+					</p>
+					<p class="footer-left-email">
+						E-MAIL: ELEGANTFLYERS@GMIL.COM
+						+84 956 654 972
+					</p>
+					<div class="footer-social-media">
+							<ul class="footer-social">
+								<li class="footer-social-item">
+									<a href="" class="footer-social-link">
+										<i class="fa fa-facebook-official" aria-hidden="true"></i>|
+									</a>
+								</li>
+								<li class="footer-social-item">
+									<a href="" class="social-link">
+										<i class="fa fa-twitter" aria-hidden="true"></i>|
+									</a>
+								</li>
+								<li class="footer-social-item">
+									<a href="" class="footer-social-link">
+										<i class="fa fa-behance" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+
+											<!--FOOTER RIGHT-->
+
+				<div class="footer-container-right">
+					<form action="" class="form-footer">
+						<div class="form-block">
+							<input type="name" placeholder="Name" class="footer-form-name">
+							<input type="email" placeholder="E-mail" class="footer-form-email">
+						</div>
+						<div class="form-block">
+							<input type="text" placeholder="Telephone" class="footer-form-telephone">
+							<input type="text" placeholder="Website" class="footer-form-website">
+						</div>
+							<input type="text" placeholder="Message" class="footer-form-message">
+							<input type="submit" class="footer-form-submit">
+					</form>
 				</div>
+				<hr class="footer-underline">
+				<address class="copyright">
+					Copyright © 2015 Atlantida Theme
+				</address>
 			</div>
-
 		</div>
-
-
-									<!--FOOTER RIGHT-->
-
-		<div class="footer-container-right">
-			<form action="" class="form-footer">
-				<div class="form-block">
-					<input type="name" placeholder="Name" class="footer-form-name">
-					<input type="email" placeholder="E-mail" class="footer-form-email">
-				</div>
-				<div class="form-block">
-					<input type="text" placeholder="Telephone" class="footer-form-telephone">
-					<input type="text" placeholder="Website" class="footer-form-website">
-				</div>
-					<input type="text" placeholder="Message" class="footer-form-message">
-					<input type="submit" class="footer-form-submit">
-			</form>
-		</div>
-		<hr class="footer-underline">
-		<address class="copyright">
-			Copyright © 2015 Atlantida Theme
-		</address>
 	</footer>
-	
+
 </body>
 </html>
 
