--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ATLANTIDA</title>
 	<link rel="stylesheet" href="testnew.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -15,8 +15,10 @@
 			<div class="header-top">
 				<div class="header-logo">
 					<a href="testnew.html" class="logo">
-						<img src="img/ATLANTIDA_logo.png" alt="ATLANTIDA" class="logo-img">
-						<p class="logo-text">ATLANTIDA</p> 
+						<img src="img/icon-logo.png" alt="ATLANTIDA" class="logo-img"> 
+					</a>
+					<a href="testnew.html" class="logo">
+					<p class="logo-text">ATLANTIDA</p>
 					</a>
 				</div>
 
@@ -281,7 +283,9 @@
 
 				<div class="sidebar-posts">
 					<p class="sidebar-latest-posts">LATEST POSTS</p>
-					<img src="img/sidebar-img1.png" alt="" class="sidebar-posts-img">
+					<div class="sidebar-container-img">
+						<img src="img/sidebar-img1.png" alt="" class="sidebar-posts-img">
+					</div>
 					<div class="sidebar-posts-container"><p class="sidebar-posts-text">SIT AMET PRETIUM ODIO MAGNA EGE</p>
 					<i class="sidebar-posts-text-italics">Nullam lobortis, turpis lobortis placerat vehicula, ipsum</i></div>
 					<hr class="sidebar-posts-underline">
@@ -290,7 +294,9 @@
 									<!--LATETS POSTS-->
 
 				<div class="sidebar-posts">
-					<img src="img/sidebar-img2.png" alt="" class="sidebar-posts-img">
+					<div class="sidebar-container-img">
+						<img src="img/sidebar-img2.png" alt="" class="sidebar-posts-img">
+					</div>
 					<div class="sidebar-posts-container"><p class="sidebar-posts-text">SIT AMET PRETIUM ODIO MAGNA EGE</p>
 					<i class="sidebar-posts-text-italics">Nullam lobortis, turpis lobortis placerat vehicula, ipsum</i></div>
 					<hr class="sidebar-posts-underline">
@@ -299,7 +305,9 @@
 									<!--LATETS POSTS-->
 
 				<div class="sidebar-posts">
-					<img src="img/sidebar-img3.png" alt="" class="sidebar-posts-img">
+					<div class="sidebar-container-img">
+						<img src="img/sidebar-img3.png" alt="" class="sidebar-posts-img">
+					</div>
 					<div class="sidebar-posts-container"><p class="sidebar-posts-text">SIT AMET PRETIUM ODIO MAGNA EGE</p>
 					<i class="sidebar-posts-text-italics">Nullam lobortis, turpis lobortis placerat vehicula, ipsum</i></div>
 					<hr class="sidebar-posts-underline">
@@ -308,7 +316,9 @@
 									<!--LATETS POSTS-->
 
 				<div class="sidebar-posts">
-					<img src="img/sidebar-img4.png" alt="" class="sidebar-posts-img">
+					<div class="sidebar-container-img">
+						<img src="img/sidebar-img4.png" alt="" class="sidebar-posts-img">
+					</div>
 					<div class="sidebar-posts-container"><p class="sidebar-posts-text">SIT AMET PRETIUM ODIO MAGNA EGE</p>
 					<i class="sidebar-posts-text-italics">Nullam lobortis, turpis lobortis placerat vehicula, ipsum</i></div>
 				</div>
